--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       <div class="card_white">
         <h1><strong>Hello, I'm Nuno Cassandra! 😎</strong></h1>
         <img src="images/23_03_2021 nuno cassi profile picture.jpeg" alt="Nuno profile photo">
-        <p>Le Wagon student, I'm an entrepreneur and web devoloper. </p>
+        <p>Le Wagon student, I'm an entrepreneur and web devoloper </p>
         <a href="https://www.lewagon.com" target="_blank">
         <element class="button"><strong>Discover Le Wagon!</strong></element>
         </a>
